--- a/content/collection/summary.html
+++ b/content/collection/summary.html
@@ -24,53 +24,64 @@
   <p>100,000 views</p>
 </header>
 <section class="summary-content">
-
   <p class="center-align">
     <button id="play-video" class="video-button">	▶ Play Video</button>
   </p>
-
   <p>
-    Much of our understanding of the distribution, causes and consequences of disease comes from
-    epidemiology or population health research. This field of science has evolved over decades, moving
-    from the ‘shoe leather epidemiology’ of John Snow during the 1854 Cholera epidemic, to population
-    surveys, to cohort studies and registers, and to ‘real world data’ using routinely collected health
-    information from administrative data and electronic health records. Much of this real-world data is
-    collected by researchers or clinicians, typically at one-off assessments or at irregularly spaced visits.
+    Many patients and the public are willing, and often keen, to contribute to health research. This is
+    especially true if the research addresses questions of personal importance, and which lead to clear
+    public benefit. Unfortunately, taking part in research is not always easy with practical challenges like
+    needing to travel for clinic visits during a working week.
   </p>
-
   <p>
-    The widespread uptake of consumer technology by patients and the public provides a new platform
-    to advance our understanding of the causes and consequences of disease, creating the opportunity
-    for people to contribute to health research by providing data from home. Such electronic person-
-    generated health data (ePGHD) collected via smartphones and wearables will allow top priority, as-
-    yet unanswered research questions to be answered, such as the examples from James Lind Alliance
-    Priority Setting Partnerships (1) shown in Box 1. Specific benefits that unlock these opportunities
-    include the convenience and ease of participation; the ability to share richer information about their
-    disease – for example, tracking how their physical and mental health symptoms change day-to-day,
-    providing objective data about their environment, their behaviour (such as physical activity) and
-    performance in digital physical and mental tasks; lower costs by avoiding the need for research visit
-    appointments; plus the opportunity to develop a more direct, two-way relationship with research
-    participants, allowing research results to be fed back directly (ref- <a href="javascript:;">Charting a Course</a>).
+    Smartphones and wearables provide a new opportunity for patients and the public to contribute to
+    health research from the comfort of their home. For patients, this can make participation easier and
+    allows more people to take part. For researchers, it provides an exciting source of new data,
+    allowing important questions to be addressed that have previously been unanswerable.
   </p>
-
   <p>
-    The aim of this Partnership Grant is to bring together, strengthen and advance the interdisciplinary
-    community necessary for success in conducting health research from home. We will do this by: 
-    <ol>
-      <li>
-        collating best practice in smartphone and wearable population health research across the
-        assembled partnership and spreading this to the wider community (<a href="javascript:;">WP1</a> and <a href="javascript:;">2</a>)
-      </li>
-      <li>
-        pioneering
-    the new era of using smartphone and wearable data linked to existing research databanks (WP3),
-    using the assembled people, methods and technology across the new partnership.
-      </li>
-    </ol>
-    Ultimately, this
-    will allow research questions to be addressed that have been difficult to answer to date (Box 1), and
-    will position the UK as a global leader in innovative, participatory population health research.
+    Opportunities include measuring things more frequently: for example logging daily symptoms during
+    the pandemic via the Zoe COVID Symptom Study smartphone app allowed us to understand that loss
+    of smell was an important and specific symptom of COVID-19 infection. Consumer technology also
+    allows researchers to measure things more accurately. This might include using sensors within your
+    smartphone or wrist-worn device to measure how your activity is changing in response to your
+    disease, or perhaps following a new treatment. This new type of data that comes direct from the
+    public can be even more useful if combined with other data, such as information provided by clinical
+    teams within health records, or genetic blood samples that have been donated for research.
+    The number of successful health research studies using smartphones and wearables, however,
+    remains low. This is because it is new and difficult. It requires research teams to overcome lots of
+    barriers simultaneously.
+    For example, they need to design the study so patients will be interested,
+    can take part simply and easily and will remain engaged through time. They need to find the right
+    technology partner to help them understand what can be measured with the device, and how to do
+    that in the best possible way. They need to ensure all the data remains secure as it moves from the
+    device to computer storage ready for analysis. They need to understand how best to analyse and
+    interpret this new continuous stream of data.
   </p>
-
+  <p>
+    Our Partnership Grant is bringing together researchers who have all conducted successful studies
+    using smartphones and wearables. It is our intention to pool our experience and share it with the
+    wider research community. We will do this by running a series of events. These will describe studies
+    that have gone well, as well as those that haven't, to share lessons learned. We will host regular
+    online meetings and annual events that will allow the whole community to meet and learn from one
+    another. We will host 'walk-in' clinics providing advice and support about partnership with patients
+    and the public, and how best to conduct research safely and securely. We will support researchers to
+    develop strong bids for future research, and will run annual challenges to improve the way in which
+    we can analyse those continuous data streams. We will share all of this learning at the events, and
+    will also store it online (eg as documents or short videos) for anyone to access any time.
+  </p>
+  <p>
+    We will also run two projects at the cutting edge of Health Research from Home which require data
+    from smartphones and wearables to be linked to other health data: one on understanding patterns
+    of physical activity after knee replacements, and the second on long-term health outcomes of Long
+    COVID. The projects will answer clinically important questions and simultaneously enhance our
+    understanding of how best to conduct such studies.
+  </p>
+  <p>
+    Taken together, we aim to establish new partnerships, build capacity in this important area and
+    advance into new, technically difficult areas. We will develop a skilled and sustainable community
+    who will, in the future, be enable the public to help answer many of those questions that matter to
+    them through the use of their own devices.
+  </p>
   <p>Website: <a href="javascript:;">TBC</a></p>
 </section>
